[package]
name = "feature_extraction_rust_complete"
version = "1.0.0"
edition = "2021"
description = "Pure Rust implementation of Catch22, entropy, and statistical feature extraction for time-series signals"
authors = ["Vignan Kamarthi"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Numerics
ndarray = "0.16"
statrs = "0.17"
nalgebra = "0.33"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"
num_cpus = "1.16"

# I/O
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Progress + logging
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Time
chrono = "0.4"

# FFT (for spectral features)
rustfft = "6.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"

[[bench]]
name = "extraction_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
